--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <fragment android:name="com.pifft.GalleryFragment"
+    <fragment android:name="com.osesm.pifft.GalleryFragment"
     	android:id="@+id/gallery"
     	android:layout_weight="1"
     	android:layout_width="0dp"
     	android:layout_height="match_parent" />
 
 
-    <fragment android:name="com.pifft.CanvasFragment"
+    <fragment android:name="com.osesm.pifft.CanvasFragment"
     	android:id="@+id/canvas"
     	android:layout_weight="2"
     	android:layout_width="0dp"
